--- a/paper.tex
+++ b/paper.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \maketitle
-Our world contains randomness, yet maintains stability over time \cite{prigogine1984order, anderson1972more}. Catastrophic low-probability events, e.g., 1/10000 could theoretically collapse the system, but rarely manifest. In ML, without regularization, models generate nonsensical sequences \cite{holtzman2019curious}. While quantum mechanics allows phenomena like tunneling \cite{razavy2003quantum}, environmental decoherence naturally suppresses such effects at macroscopic scales - an elegant example of nature's built-in regularization. This suppression might be understood through multiple perspectives: either as quantum decoherence, as min-p regularization, or perhaps as different views of the same underlying principle \cite{barrow1988anthropic}.
+Our world contains randomness, yet maintains stability over time \cite{anderson1972more, prigogine1984order}. Catastrophic low-probability events, e.g., 1/10000 could theoretically collapse the system, but rarely manifest. In ML, without regularization, models generate nonsensical sequences \cite{holtzman2019curious}. While quantum mechanics allows phenomena like tunneling \cite{razavy2003quantum}, environmental decoherence naturally suppresses such effects at macroscopic scales - an elegant example of nature's built-in regularization. This suppression might be understood through multiple perspectives: either as quantum decoherence, as min-p regularization, or perhaps as different views of the same underlying principle \cite{barrow1988anthropic}.
 
 
 We define such catastrophic low-probability events as Catales (pronouncing like Katals). When time approaches infinity, Catales with constant probability must eventually occur:
